--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="seed">#90BE6D</color>
+    <color name="md_theme_light_primary">#3D691B</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#BCF293</color>
+    <color name="md_theme_light_onPrimaryContainer">#0B2000</color>
+    <color name="md_theme_light_secondary">#56624B</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#DAE7CA</color>
+    <color name="md_theme_light_onSecondaryContainer">#141E0C</color>
+    <color name="md_theme_light_tertiary">#386665</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#BBECEA</color>
+    <color name="md_theme_light_onTertiaryContainer">#002020</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FDFDF5</color>
+    <color name="md_theme_light_onBackground">#1A1C18</color>
+    <color name="md_theme_light_surface">#FDFDF5</color>
+    <color name="md_theme_light_onSurface">#1A1C18</color>
+    <color name="md_theme_light_surfaceVariant">#E0E4D6</color>
+    <color name="md_theme_light_onSurfaceVariant">#44483E</color>
+    <color name="md_theme_light_outline">#74796D</color>
+    <color name="md_theme_light_inverseOnSurface">#F1F1EA</color>
+    <color name="md_theme_light_inverseSurface">#2F312C</color>
+    <color name="md_theme_light_inversePrimary">#A1D57A</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#3D691B</color>
+    <color name="md_theme_light_surfaceTintColor">#3D691B</color>
+    <color name="md_theme_dark_primary">#A1D57A</color>
+    <color name="md_theme_dark_onPrimary">#173800</color>
+    <color name="md_theme_dark_primaryContainer">#255101</color>
+    <color name="md_theme_dark_onPrimaryContainer">#BCF293</color>
+    <color name="md_theme_dark_secondary">#BECBAF</color>
+    <color name="md_theme_dark_onSecondary">#293420</color>
+    <color name="md_theme_dark_secondaryContainer">#3F4A35</color>
+    <color name="md_theme_dark_onSecondaryContainer">#DAE7CA</color>
+    <color name="md_theme_dark_tertiary">#A0CFCE</color>
+    <color name="md_theme_dark_onTertiary">#003736</color>
+    <color name="md_theme_dark_tertiaryContainer">#1E4E4D</color>
+    <color name="md_theme_dark_onTertiaryContainer">#BBECEA</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1A1C18</color>
+    <color name="md_theme_dark_onBackground">#E3E3DC</color>
+    <color name="md_theme_dark_surface">#1A1C18</color>
+    <color name="md_theme_dark_onSurface">#E3E3DC</color>
+    <color name="md_theme_dark_surfaceVariant">#44483E</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C4C8BB</color>
+    <color name="md_theme_dark_outline">#8E9286</color>
+    <color name="md_theme_dark_inverseOnSurface">#1A1C18</color>
+    <color name="md_theme_dark_inverseSurface">#E3E3DC</color>
+    <color name="md_theme_dark_inversePrimary">#3D691B</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#A1D57A</color>
+    <color name="md_theme_dark_surfaceTintColor">#A1D57A</color>
 </resources>
