--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,4 +59,5 @@
     <color name="md_theme_dark_shadow">#000000</color>
     <color name="md_theme_dark_surfaceTint">#A1D57A</color>
     <color name="md_theme_dark_surfaceTintColor">#A1D57A</color>
+    <color name="text_color_secondary">@color/md_theme_light_onSurfaceVariant</color>
 </resources>
