--- a/app/src/main/res/layout/blog_screen.xml
+++ b/app/src/main/res/layout/blog_screen.xml
@@ -44,7 +44,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
-                tools:itemCount="10"
+                tools:itemCount="0"
                 tools:listitem="@layout/item_list_blog" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
@@ -57,4 +57,9 @@
         android:layout_margin="24dp"
         app:icon="@drawable/ic_add_24px"
         android:text="Blog" />
+
+    <include
+        android:id="@+id/empty_blog"
+        layout="@layout/empty_blog_layout_content"
+        android:visibility="visible" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
