Updating icon reference

--- a/app/src/main/res/menu/menu_blog.xml
+++ b/app/src/main/res/menu/menu_blog.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/authors"
         app:showAsAction="always"
-        android:icon="@drawable/ic_authors_24px"
+        android:icon="@drawable/ic_authors"
         android:title="Authors" />
 </menu>
