Updating list items

--- a/app/src/main/res/layout/item_list_author.xml
+++ b/app/src/main/res/layout/item_list_author.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
-    app:cardCornerRadius="8dp">
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?selectableItemBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -69,7 +71,7 @@
             android:layout_width="54dp"
             android:layout_height="54dp"
             android:contentDescription="@string/app_name"
-            app:icon="@drawable/ic_overflow_24px"
+            app:icon="@drawable/ic_edit_24px"
             app:iconGravity="textStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
