--- a/app/src/main/res/layout/author_screen.xml
+++ b/app/src/main/res/layout/author_screen.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.view.AuthorScreen">
 
     <include
@@ -15,27 +15,29 @@
         android:id="@+id/recyclerview_authors"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/lbl_toolbar_authors"
         android:overScrollMode="never"
         android:scrollbars="none"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="0"
-        tools:spanCount="2"
         tools:listitem="@layout/item_list_author"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+        tools:spanCount="2" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/btn_add_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        style="?attr/floatingActionButtonSurfaceStyle"
         android:layout_margin="24dp"
-        app:icon="@drawable/ic_add_24px"
-        android:text="Author" />
+        android:text="Author"
+        app:icon="@drawable/ic_add_24px" />
 
     <include
         android:id="@+id/empty_author"
