--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_host_fragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:defaultNavHost="true"
+    app:enableEdgeToEdge="true"
     app:navGraph="@navigation/main_nav_graph"
-    android:name="androidx.navigation.fragment.NavHostFragment"
-    tools:context=".ui.view.MainActivity"/>
+    tools:context=".ui.view.MainActivity" />
