--- a/app/src/main/res/layout/item_list_blog.xml
+++ b/app/src/main/res/layout/item_list_blog.xml
@@ -50,10 +50,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="2"
             android:text="@string/cat_topappbar_lorem_ipsum"
             android:textAlignment="viewStart"
-            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/btn_edit"
             app:layout_constraintEnd_toEndOf="parent"
